Fix text wrapping below publication teaser images
Changed layout approach from clearfix to overflow: auto to prevent text
from wrapping under floated images. This ensures all text content stays
aligned to the right of the images for better visual presentation.

--- a/_sass/layout/_archive.scss
+++ b/_sass/layout/_archive.scss
@@ -80,16 +80,16 @@
   .archive__item-teaser {
     float: left;
     margin-right: 2em;
-    margin-bottom: 0;
+    margin-bottom: 1.5em;
     max-width: 350px;
   }
 
   .archive__item {
-    @include clearfix();
+    overflow: auto;
   }
 
   h2 {
-    clear: none;
+    margin-top: 0;
   }
 
   p {
